@@ -1,3 +1,14 @@
+Sun Jan  6 19:16:03 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	src:
+	* m_cpu.c (m_nop): Don't warn twice about narrow width specifier in
+	ARM mode.
+	* directive_data.c (c_dci): Beautify.
+	* macros.c (Macro_Find): Fix suffix wildcard test.
+	(c_macro): Fix test on previous (possibly eclipsing) macro definition.
+
+	* unittests/compare/core/macro_args.s: Add test case.
+
 Sat Dec 15 20:39:32 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	src:
